--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,9 @@
 {
-  "version": 2,
-  "buildCommand": "npm run build",
+  "buildCommand": "echo 'No build needed'",
   "outputDirectory": ".",
   "installCommand": "npm install",
-  "framework": null,
-  "devCommand": null,
   "cleanUrls": true,
   "trailingSlash": false,
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    },
-    {
-      "handle": "filesystem"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
-    }
-  ],
   "headers": [
     {
       "source": "/(.*)",
